--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,14 @@
         "knplabs/knp-paginator-bundle": "~2.5",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "3.4.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/symfony": "^3.4",
         "twig/extensions": "^1.3",
         "twig/twig": "^1.28"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "friendsofphp/php-cs-fixer": "^1.12",
         "phpunit/phpunit": "^4.8 || ^5.0",
         "sensio/generator-bundle": "^3.0",
