--- a/composer.json
+++ b/composer.json
@@ -18,29 +18,23 @@
         }
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": "^8.0",
         "cocur/slugify": "^3.1",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
-        "doctrine/doctrine-fixtures-bundle": "^2.2",
-        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-cache-bundle": "*",
+        "doctrine/doctrine-fixtures-bundle": "*",
         "imagine/imagine": "dev-master",
         "incenteev/composer-parameter-handler": "^2.0",
-        "knplabs/knp-paginator-bundle": "~2.5",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "symfony/monolog-bundle": "3.4.0",
-        "symfony/polyfill-apcu": "^1.0",
-        "symfony/symfony": "^3.4",
-        "twig/extensions": "^1.3",
-        "twig/twig": "^1.28"
+        "knplabs/knp-paginator-bundle": "*",
+        "sensio/framework-extra-bundle": "*",
+        "symfony/monolog-bundle": "*",
+        "symfony/polyfill-apcu": "*",
+        "symfony/symfony": "^v4.4.36",
+        "twig/extensions": "*",
+        "twig/twig": "*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
-        "friendsofphp/php-cs-fixer": "^1.12",
-        "phpunit/phpunit": "^4.8 || ^5.0",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "roave/security-advisories": "dev-master"
     },
     "scripts": {
         "symfony-scripts": [
